--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-b24-custom-nodes",
   "version": "0.1.0",
-  "description": "",
+  "description": "Business24AI Custom Nodes for n8n",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://www.skool.com/business24ai",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Kiu",
+    "email": "q@b24.ai"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/business24ai/n8n-nodes-b24-custom-nodes.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -37,6 +37,7 @@
       "dist/credentials/HttpBinApi.credentials.js"
     ],
     "nodes": [
+      "dist/nodes/B24CryptoManager/B24CryptoManager.node.js",
       "dist/nodes/ExampleNode/ExampleNode.node.js",
       "dist/nodes/HttpBin/HttpBin.node.js"
     ]
