--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
+      "dist/credentials/B24ExchangeRateApi.credentials.js",
       "dist/credentials/ExampleCredentialsApi.credentials.js",
       "dist/credentials/HttpBinApi.credentials.js"
     ],
     "nodes": [
       "dist/nodes/B24CryptoManager/B24CryptoManager.node.js",
+      "dist/nodes/B24ExchangeRate/B24ExchangeRate.node.js",
       "dist/nodes/ExampleNode/ExampleNode.node.js",
       "dist/nodes/HttpBin/HttpBin.node.js"
     ]
